学习tomcat在IDEA的配置和web打包测试